# apets-ariel

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
scripts/: push_to_ripper.sh  test_canonical_bodies.sh  watchmaker.sh
scripts/zoo/: pull.sh  rerun.sh  run_all.sh  run_one.sh
src/aapets/: canonical_bodies.py  config.py  evaluation_result.py  evaluator.py  evo.py  genotype.py  map_elite.py  metrics.py  mj_callback.py  phenotype.py  rerun.py
src/aapets/anthropomorphism/: generate_html.py
src/aapets/common/: README.md  calibrate_from_hardware.py  canonical_bodies.py  config.py  evaluation_result.py  evaluator.py  mj_callback.py  morphological_measures.py  phenotype.py  robot_storage.py  showcaser.py  world_builder.py
src/aapets/cpg_rl/: README.md  ariel-ant.xml  env.py  local_run_all.sh  main.py  monitor.sh  run_all.sh  run_all_v2.sh  run_baseline.slurm.sh  sb3_comparison.py  summaries.py  sync_results.sh  test.sh  types.py
src/aapets/fetch/: ABCpg.py  README.md  main_test.py  overlay.py  sm_fetcher.py  test.py  types.py
src/aapets/g_cpg/: config.py  deap_impl.py  debug.py  evaluation.py  main.py  plotting.py  run_all.sh  sync_results.sh  types.py  worlds.py
src/aapets/miel/: README.md  config.py  evaluator.py  genotype.py  map_elite.py
src/aapets/misc/: README.md  config_base.py  showcaser.py  viewer_plugins.py
src/aapets/symmetry/: config.py  cpg_showcaser.py  deap_impl.py  evaluation.py  genotypes.py  main.py  novelty.py  plotting.py  revdeknn.py  run_all.sh  sync_results.sh  types.py  worlds.py
src/aapets/watchmaker/: README.md  (+8 more)
(+35 files in other folders)
