[project]
name = "apets-ariel"
version = "0"
authors = [{ name="Kevin Godin-Dubois", email="k.j.m.godin-dubois@vu.nl"}]
description = "Testbed for ariel-powered (previously known as revolve) RL-trained agents"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 3 - Alpha",
  
  "Programming Language :: Python :: 3 :: Only",

  "License :: OSI Approved :: MIT License",

  "Operating System :: Unix",

  "Intended Audience :: Science/Research", 
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Artificial Life",
]
dependencies = [
    "humanize", "qdpy", "colorama", "tqdm", "rich"
]

[project.optional-dependencies]
watchmaker = [
    "PyQt6", "optuna"
]

[project.urls]
Homepage = "https://github.com/kgd-al/apets-ariel"

[project.scripts]

[build-system]
requires = [
  "setuptools>=65.0",
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
